# lab-06-multithreads

./: .travis.yml  CMakeLists.txt
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
